# agent-gemshot

./: .env.example  .gitignore  README.md  gemshot.py  pyproject.toml  requirements.txt
docs/plans/: 2026-03-11-gemini-capture-design.md  2026-03-11-gemini-capture.md
tests/: test_gemshot.py
