[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-gemshot"
version = "0.1.0"
description = "CLI tool to screenshot any Windows process window"
requires-python = ">=3.8"
dependencies = [
    "pywin32",
    "Pillow",
    "questionary",
    "psutil",
]

[tool.setuptools]
py-modules = ["gemshot"]

[project.scripts]
agent-gemshot = "gemshot:main"
